QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


0.5.9  2019-07-12  A Summer'19 Release.

- Updated for the newer Qt5 translation tools (>= 5.13).

- Configure updated to check for qtchooser availability.



0.5.8  2019-05-25  A Spring'19 Release.

- When enabled the current default preset settings are
  now read from the last known JACK D-BUS configuration.

- Minor update to Debian packaging control file.

- Removed all the remaining leftovers of old pre-FFADO
  'freebob' driver support.


0.5.7  2019-03-11  A Spring-Break'19 Release.

- Graph node and port title renaming and nodes position
  move changes are now undo/redo-able.

- Graph client and port title in-place renaming is now
  integrated to native aliases and JACK metadata (aka.
  pretty-names).
  
- Refactored all native client/port name aliases.

- Re-defined all main application UNIX signal handling.


0.5.6  2019-03-11  Pre-LAC2019 Release Frenzy.

- Refactored all singleton/unique application instance
  setup logic away from X11/Xcb hackery.

- At last, JACK freewheel mode is now being detected
  as to postpone any active patchbay scans as much as
  possible.
  
- Removed old pre-FFADO 'freebob' driver support.

- HiDPI display screen support (Qt >= 5.6).

- Graph port temporary highlighting while hovering,
  if and only if connecting ports of same type and
  complementary modes.

- Bumped copyright headers into the New Year (2019).


0.5.5  2018-11-23  A Black-Friday'18 Release!

- Old deprecated Qt4 build support is no more.

- Graph port sort options added as View / Sort menu.

- System tray options now subject to current desktop
  environment availability.

- Also disable Setup / Misc / Other / Save JACK server
  configuration to (.jackdrc) when JACK D-Bus interface
  is enabled.

- Whether to use server synchronous mode option added
  to Setup / Settings / Parameters (only applied when
  JACK D-BUS interface is enabled).
